--- a/index.html
+++ b/index.html
@@ -1,6 +1,12 @@
-<div id="drop_zone">Drop files here</div>
-<output id="list"></output>
-<div id="demo">
-  <text-grid :columns="gridColumns" :maxval="maxLengthCalculated">
-  </text-grid>
-</div>
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>text-editor</title>
+  </head>
+  <body>
+    <div id="drop_zone">Drop files here</div> 
+    <div id="app"></div>
+    <!-- built files will be auto injected -->
+  </body>
+</html>
